docs: update memory with campaign execution and commons-codec results
- commons-codec-2: MISSED in top-3 (base64 patch), CAUGHT in SA auto-mode
- commons-codec-3: Queued with charsequenceutils-regionmatches-flip patch
- kafka, maven, ai-sdk-java: Queued campaigns (4 running in parallel)
- Identified class dependency alignment as critical success factor

Thinkstation network issues after campaign start (~06:00); campaigns likely running
on background. Results pending connectivity recovery.